enhanced the findings

--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -2153,7 +2153,7 @@
     "- KNN is the fastest, followed by Logistic regression. SVC is the slowest.\n",
     "- After tuning, each model has accuracy over 0.9\n",
     "- Overall, the Decision Tree model offers the best performance in terms of test accuracy, while Logistic Regression strikes a good balance between speed and performance. KNN is suitable for extremely fast training needs, though it slightly underperforms on test accuracy. SVM may be less practical due to its high computational cost without a significant accuracy advantage.\n",
-    "- Top ten features are: month_mar, duration, euribor3m, cons.price.idx, poutcome_success, month_aug, poutcome_nonexistent, job_retired, month_sep, education_illiterate  "
+    "- Top ten features with highest positive coefficients are: month_mar, duration, euribor3m, cons.price.idx, poutcome_success, month_aug, poutcome_nonexistent, job_retired, month_sep, education_illiterate  "
    ]
   },
   {
