Re-ran the notebook file and updated the readme file

--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,10 +1437,13 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
     "lgr_prediction = lgr.predict(X_test)\n",
-    "lgr_score = accuracy_score(y_test, lgr_prediction)\n",
-    "print(lgr_score)"
+    "lgr_accuracy_score = accuracy_score(y_test, lgr_prediction)\n",
+    "lgr_recall_score = recall_score(y_test, lgr_prediction)\n",
+    "lgr_precision_score = precision_score(y_test, lgr_prediction)\n",
+    "lgr_f1_score = f1_score(y_test, lgr_prediction)\n",
+    "print(lgr_accuracy_score)"
    ]
   },
   {
@@ -1465,11 +1468,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       Model  Train Time  Train Accuracy  Test Accuracy\n",
-      "0  Logistic Regression model    0.176481        0.911927       0.911022\n",
-      "1              KNN algorithm    0.022400        0.928619       0.903010\n",
-      "2              Decision Tree    0.317930        1.000000       0.886380\n",
-      "3                 SVM models   25.267971        0.856722       0.845472\n"
+      "                       Model  Train Time  Train Accuracy  Test Accuracy  \\\n",
+      "0  Logistic Regression model    0.201142        0.911927       0.911022   \n",
+      "1              KNN algorithm    0.002884        0.928619       0.903010   \n",
+      "2              Decision Tree    0.426489        1.000000       0.888808   \n",
+      "3                 SVM models   29.861710        0.856722       0.845472   \n",
+      "\n",
+      "   Test Recall  Test Precision  Test F1 score  \n",
+      "0     0.428877        0.668333       0.522476  \n",
+      "1     0.456684        0.594708       0.516636  \n",
+      "2     0.531551        0.509744       0.520419  \n",
+      "3     0.926203        0.418357       0.576373  \n"
      ]
     }
    ],
@@ -1488,7 +1497,11 @@
     "    train_time = end_time - start_time\n",
     "    accuracy_train = accuracy_score(y_train, classifier.predict(X_train))\n",
     "    accuracy_test = accuracy_score(y_test, classifier.predict(X_test))\n",
-    "    performances.append({'Model':name, 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test})\n",
+    "    recall_score_test = recall_score(y_test, classifier.predict(X_test))\n",
+    "    precision_score_test = precision_score(y_test, classifier.predict(X_test))\n",
+    "    f1_score_test = f1_score(y_test, classifier.predict(X_test))\n",
+    "    performances.append({'Model':name, 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test,\n",
+    "                        'Test Recall':recall_score_test,'Test Precision':precision_score_test,'Test F1 score':f1_score_test})\n",
     "performances_df = pd.DataFrame(performances)\n",
     "print(performances_df)"
    ]
@@ -1529,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1905,7 @@
        "4       5191.0  0  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1910,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1936,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1945,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2017,18 +2030,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       Model  Train Time  Train Accuracy  Test Accuracy\n",
-      "0  Logistic Regression model    0.289282        0.911168       0.912115\n",
-      "1              KNN algorithm    0.015671        0.921335       0.908352\n",
-      "2              Decision Tree    0.189511        0.917329       0.915149\n",
-      "3                 SVM models   27.640711        0.917451       0.909444\n"
+      "                       Model  Train Time  Train Accuracy  Test Accuracy  \\\n",
+      "0  Logistic Regression model    0.177844        0.911168       0.912115   \n",
+      "1              KNN algorithm    0.005552        0.921335       0.908352   \n",
+      "2              Decision Tree    0.080536        0.917329       0.915149   \n",
+      "3                 SVM models   16.340876        0.917451       0.909444   \n",
+      "\n",
+      "   Test Recall  Test Precision  Test F1 score  \n",
+      "0     0.437433        0.673806       0.530480  \n",
+      "1     0.471658        0.628205       0.538790  \n",
+      "2     0.543316        0.651282       0.592420  \n",
+      "3     0.404278        0.666667       0.503329  \n"
      ]
     }
    ],
@@ -2040,8 +2059,13 @@
     "end_time = time.time()\n",
     "train_time = end_time - start_time\n",
     "accuracy_train = accuracy_score(y_train, classifier.predict(X_train))\n",
-    "accuracy_test = accuracy_score(y_test, classifier.predict(X_test))\n",
-    "performances_new.append({'Model':'Logistic Regression model', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test})\n",
+    "prediction_test = classifier.predict(X_test)\n",
+    "accuracy_test = accuracy_score(y_test, prediction_test)\n",
+    "recall_score_test = recall_score(y_test, prediction_test)\n",
+    "precision_score_test = precision_score(y_test, prediction_test)\n",
+    "f1_score_test = f1_score(y_test, prediction_test)\n",
+    "performances_new.append({'Model':'Logistic Regression model', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test,\n",
+    "                        'Test Recall':recall_score_test,'Test Precision':precision_score_test,'Test F1 score':f1_score_test})\n",
     "\n",
     "classifier = knn_grid.best_estimator_\n",
     "start_time = time.time()\n",
@@ -2049,8 +2073,13 @@
     "end_time = time.time()\n",
     "train_time = end_time - start_time\n",
     "accuracy_train = accuracy_score(y_train, classifier.predict(X_train))\n",
-    "accuracy_test = accuracy_score(y_test, classifier.predict(X_test))\n",
-    "performances_new.append({'Model':'KNN algorithm', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test})\n",
+    "prediction_test = classifier.predict(X_test)\n",
+    "accuracy_test = accuracy_score(y_test, prediction_test)\n",
+    "recall_score_test = recall_score(y_test, prediction_test)\n",
+    "precision_score_test = precision_score(y_test, prediction_test)\n",
+    "f1_score_test = f1_score(y_test, prediction_test)\n",
+    "performances_new.append({'Model':'KNN algorithm', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test,\n",
+    "                        'Test Recall':recall_score_test,'Test Precision':precision_score_test,'Test F1 score':f1_score_test})\n",
     "\n",
     "classifier = dt_grid.best_estimator_\n",
     "start_time = time.time()\n",
@@ -2058,8 +2087,13 @@
     "end_time = time.time()\n",
     "train_time = end_time - start_time\n",
     "accuracy_train = accuracy_score(y_train, classifier.predict(X_train))\n",
-    "accuracy_test = accuracy_score(y_test, classifier.predict(X_test))\n",
-    "performances_new.append({'Model':'Decision Tree', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test})\n",
+    "prediction_test = classifier.predict(X_test)\n",
+    "accuracy_test = accuracy_score(y_test, prediction_test)\n",
+    "recall_score_test = recall_score(y_test, prediction_test)\n",
+    "precision_score_test = precision_score(y_test, prediction_test)\n",
+    "f1_score_test = f1_score(y_test, prediction_test)\n",
+    "performances_new.append({'Model':'Decision Tree', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test,\n",
+    "                        'Test Recall':recall_score_test,'Test Precision':precision_score_test,'Test F1 score':f1_score_test})\n",
     "\n",
     "classifier = svc_grid.best_estimator_\n",
     "start_time = time.time()\n",
@@ -2067,8 +2101,13 @@
     "end_time = time.time()\n",
     "train_time = end_time - start_time\n",
     "accuracy_train = accuracy_score(y_train, classifier.predict(X_train))\n",
-    "accuracy_test = accuracy_score(y_test, classifier.predict(X_test))\n",
-    "performances_new.append({'Model':'SVM models', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test})\n",
+    "prediction_test = classifier.predict(X_test)\n",
+    "accuracy_test = accuracy_score(y_test, prediction_test)\n",
+    "recall_score_test = recall_score(y_test, prediction_test)\n",
+    "precision_score_test = precision_score(y_test, prediction_test)\n",
+    "f1_score_test = f1_score(y_test, prediction_test)\n",
+    "performances_new.append({'Model':'SVM models', 'Train Time':train_time, 'Train Accuracy':accuracy_train, 'Test Accuracy':accuracy_test,\n",
+    "                        'Test Recall':recall_score_test,'Test Precision':precision_score_test,'Test F1 score':f1_score_test})\n",
     "\n",
     "performances_new_df = pd.DataFrame(performances_new)\n",
     "print(performances_new_df)"
@@ -2083,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
