Enhanced the documentation

--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -955,7 +955,7 @@
    "metadata": {},
    "source": [
     "#### Step 7.1: What is the baseline performance that our classifier should aim to beat?\n",
-    "Our classifier should aim to achieve significantly better performance than this baseline, particularly in terms of precision, recall, and F1-score for the positive class (y = yes/1), which represents the key outcome of interest."
+    "Based on the output, a naive classifier that always predicts class 0 (the majority class) would achieve an accuracy of 88.73%. Thus, 88.73% is the performance my classifier should aim to beat. "
    ]
   },
   {
@@ -2190,7 +2190,7 @@
     "## Findings\n",
     "- This is an imbalanced dataset\n",
     "- KNN is the fastest, followed by Logistic regression. SVC is the slowest.\n",
-    "- After tuning, each model has accuracy over 0.9\n",
+    "- After tuning, each model has accuracy over 0.9, which is higher than \n",
     "- Overall, the Decision Tree model offers the best performance in terms of test accuracy, while Logistic Regression strikes a good balance between speed and performance. KNN is suitable for extremely fast training needs, though it slightly underperforms on test accuracy. SVM may be less practical due to its high computational cost without a significant accuracy advantage.\n",
     "- Top ten features with highest positive coefficients are: month_mar, duration, euribor3m, cons.price.idx, poutcome_success, month_aug, poutcome_nonexistent, job_retired, month_sep, education_illiterate  "
    ]
